first pass pairing with dan

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "gulp-uglifyjs": "^0.6.2",
     "gulp-util": "^3.0.0",
     "jest-cli": "^11.0.2",
+    "jsdoc-parse": "^1.2.7",
     "json": "^9.0.4",
+    "json-loader": "^0.5.4",
     "mkpath": "^1.0.0",
     "onchange": "^2.4.0",
     "oui-icons": "^0.1.2",
@@ -53,11 +55,11 @@
     "postversion": "npm run postversion:publish && npm run postversion:update-devel",
     "postversion:publish": "git push && git push --tags",
     "postversion:update-devel": "git checkout devel && git pull && git merge master && git push origin devel && git checkout master",
-    "react": "gulp sass && cp ./src/index.html ./dist/index.html && webpack && browser-sync reload",
+    "react": "gulp sass && cp ./docs/index.html ./dist/docs/index.html && mkdir -p ./dist/docs/css && cp -Rv ./dist/css ./dist/docs && webpack && browser-sync reload",
     "react:serve": "npm run react && parallelshell 'npm run react:onchange' 'npm run react:browser-sync'",
-    "react:onchange": "onchange 'src/**/*.(jsx|js)' -- npm run react",
-    "react:browser-sync": "browser-sync start --server dist",
-    "react-docs": "mkdir -p dist/docs && cp -v docs/*.html dist/docs/ && react-docgen src/components/ -i tests > dist/docs/data.json && browser-sync reload",
+    "react:onchange": "onchange 'docs/**/*.(jsx|js)' -- npm run react",
+    "react:browser-sync": "browser-sync start --server dist/docs/",
+    "react-docs": "mkdir -p dist/docs && cp -v docs/*.html dist/docs/ && react-docgen src/components/ -i tests > docs/data.json && browser-sync reload",
     "react-docs:serve": "npm run react-docs && parallelshell 'npm run react-docs:onchange' 'npm run react-docs:browser-sync'",
     "react-docs:browser-sync": "browser-sync start --server './dist/docs/'",
     "react-docs:onchange": "onchange 'src/**/*.(jsx|js)' -- npm run react-docs"
