--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-addons-test-utils": "^15.1.0",
     "react-docgen": "^2.8.2",
     "react-dom": "^15.1.0",
+    "react-element-to-jsx-string": "^3.1.0",
     "require-dir": "^0.3.0",
     "webpack": "^1.12.14",
     "yargs": "^4.1.0"
