--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "browser-sync": "^2.9.8",
+    "classnames": "^2.2.5",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
     "eslint": "^2.7.0",
