--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "dist/js/main.js",
   "dependencies": {
     "clipboard": "^1.5.12",
-    "highlight.js": "^9.5.0"
+    "highlight.js": "^9.5.0",
+    "oui-icons": "^2.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.7.7",
@@ -21,6 +22,7 @@
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.2.2",
     "fs": "0.0.2",
+    "glob": "^7.0.5",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-base64": "^0.1.3",
@@ -38,7 +40,6 @@
     "json-loader": "^0.5.4",
     "mkpath": "^1.0.0",
     "onchange": "^2.4.0",
-    "oui-icons": "^0.1.2",
     "parallelshell": "^2.0.0",
     "react": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
@@ -47,6 +48,11 @@
     "react-element-to-jsx-string": "^3.2.0",
     "require-dir": "^0.3.0",
     "style-loader": "^0.13.1",
+    "svg-inline-loader": "^0.6.1",
+    "svg-jsx-loader": "0.0.16",
+    "svg-sprite-loader": "0.0.26",
+    "svgo": "^0.6.6",
+    "svgo-loader": "^1.1.0",
     "webpack": "^1.12.14",
     "yargs": "^4.1.0"
   },
@@ -63,7 +69,7 @@
     "postversion": "npm run postversion:publish && npm run postversion:update-devel",
     "postversion:publish": "git push && git push --tags",
     "postversion:update-devel": "git checkout devel && git pull && git merge master && git push origin devel && git checkout master",
-    "react-docs": "gulp sass && react-docgen src/components/ -i tests -i example > docs/data.json && mkdir -p ./dist/docs/css && cp -Rv ./dist/css ./dist/docs && cp ./docs/index.html ./dist/docs/index.html && webpack && browser-sync reload",
+    "react-docs": "gulp sass && react-docgen src/components/ -i tests -i example -i Icon > docs/data.json && mkdir -p ./dist/docs/css && cp -Rv ./dist/css ./dist/docs && cp ./docs/index.html ./dist/docs/index.html && webpack && browser-sync reload",
     "react-docs:serve": "npm run react-docs && parallelshell 'npm run react-docs:onchange' 'npm run react-docs:browser-sync'",
     "react-docs:onchange": "onchange '(docs|src)/**/*.(jsx|js)' -- npm run react-docs",
     "react-docs:browser-sync": "browser-sync start --server dist/docs/"
